card spacing fix

--- a/public/custom.css
+++ b/public/custom.css
@@ -441,7 +441,6 @@
     padding: 10px 0 0;
 }
 
-.single-card__leave-info--container .profile-text__txt3 ul,
 .single-card__leave-info--container .profile-text__txt4 ul{
     justify-content: flex-start;
 }
